# prime-polarity

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASET.md  README.md  SECURITY.md  USAGE.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
examples/: quickstart.sh
prime-polarity/: CHANGELOG.md  README.md
prime-polarity/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
prime-polarity/.github/workflows/: publish.yml
prime-polarity/examples/: Polarity_Quickstart.ipynb
prime-polarity/src/prime_polarity/: __init__.py  cli.py  generators.py  sieves.py
prime-polarity/tests/: test_basic.py
scripts/: eval.py  make_dataset.py
src/: setup.py
src/prime_polarity/: __init__.py  metrics.py  transforms.py
