[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prime-polarity"
version = "0.1.0"
description = "Polarity index for prime-signal generators (Z(p)/Z(o)) with transforms and ROC-AUC scoring."
authors = [{name="Zolton Farkas", email="info@kugguk.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["primes", "zeta", "dirichlet", "polarity", "number-theory", "auc"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research"
]

dependencies = [
    "mpmath>=1.3.0",
    "numpy>=1.22"
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "coverage>=7",
  "ruff>=0.5.0",
  "black>=24.0.0"
]

[project.scripts]
prime-polarity = "prime_polarity.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]
